# XoX

./: .clangd  .gitignore  CMakeLists.txt  README.md  XoX.sln  XoX.vcxproj  XoX.vcxproj.filters  lists.txt  xmake.lua
Coscom/: Coscom.vcxproj  Coscom.vcxproj.filters
Coscom/Debug/: vc143.idb
SandBox/: SandBox.vcxproj
SandBox/src/: main.cc  main.cpp
Task/: README.md  Task.vcxproj  func.cpp  func.h  main.cpp
XoX/module/: Delegate.ixx  Log.ixx  XoX.ixx  delegate.ixx  log.ixx  xox.ixx
XoX/src/: Delegata.ixx  Memory.ixx  XoX.ixx  delegate.ixx  smart_stack_pool.cc  stack_pool.cc  xox.ixx
core/: core.ixx  delegate.ixx  log.ixx  os.ixx  world.cc  world.ixx  xox.ixx
core/aes/: aes.ixx  atom.ixx  electron.ixx  world.cc  world.ixx
core/ecs/: world.cc  world.ixx
core/error/: error.ixx  error_list.ixx
core/io/: resource.ixx
core/math/: color.ixx  math.cppm  math.ixx  matrix.cppm  matrix.ixx  vector2.ixx  vector3.ixx  vector4.cppm  vector4.ixx
core/memory/: allocator.cc  allocator.ixx  arena.cc  arena.hh  heap.cc  heap.ixx  malloc.cc  malloc.ixx  memory.cc  memory.ixx  smart_stack_pool.cc  smart_stack_pool.ixx  stack_pool.cc  stack_pool.ixx
core/node-logic/: logic_node.hh
core/xtl/: cow_data.ixx  safe_refcount.ixx  string.ixx  vector.ixx  xtl.ixx
driver/memory/: arena.cc  memory.cc
driver/os/: os.cc  os.hh
driver/vulkan/: vulkan_context.cc  vulkan_context.hh
editor/: xmake.lua
editor/src/: main.cc
ideas/: lib.txt  list.txt  资源管理.txt
import/: log.ixx  xox.ixx
import/aes/: aes.ixx  world.cc  world.ixx
import/error/: error_list.ixx
import/memory/: heap.cc  heap.ixx  malloc.cc  malloc.ixx
import/os/: os.ixx
import/xtl/: allocator.cc  allocator.ixx  atomic.ixx  hash_map.ixx  hash_set.ixx  interface.cc  list.ixx  map.ixx  mutex.ixx  safe_refcount.ixx  set.ixx  string.cc  string.ixx  vector.ixx  (+2 more)
script/: file.list  install_import.py  mpack.lua  uninstall_import.py
tools/: xmake.lua
vsxmake2022/: XoX.sln
world/: transform.ixx
(+54 files in other folders)
